# llm-eval-harness

./: README.md  pyproject.toml
examples/: expected_schema.json  prompt_template.txt  test_inputs.json
examples/rag_suite/: rag_suite.json
examples/rag_suite/corpus/: configuration.md  installation.md  limitations.md  query_syntax.md
llm_eval_harness/: __init__.py  cli.py  corpus.py  embedder.py  models.py  rag_judge.py  rag_runner.py
llm_eval_harness/judges/: __init__.py  base.py  llm_judge.py
llm_eval_harness/reporters/: __init__.py  console.py
llm_eval_harness/runners/: __init__.py  anthropic_runner.py  base.py  openai_runner.py
