[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval-harness"
version = "0.2.0"
description = "Lightweight CLI + library for evaluating LLM application outputs"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "anthropic>=0.40",
    "openai>=1.50",
    "rich>=13",
    "voyageai>=0.3",
    "numpy>=1.26",
]

[project.scripts]
llm-eval = "llm_eval_harness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["llm_eval_harness"]
